bdr.BDR.scala.error
Compilation error:
BDR:5: error: unclosed string literal
  if (m==R") right()
           ^BDR:5: error: ')' expected but something found.
  if (m==R") right()
           ^BDR:12: error: ';' expected but 'if' found.
  if (m="C"){forward();forward();forward()}
  ^BDR:15: error: ';' expected but 'if' found.
  if (m="X"){backward();backward();backward();}
  ^